# plugin-system

./: .env.default  .gitignore  Cargo.toml
plugins/: liblogin.dylib
plugins/LoginPlugin/__MACOSX/: ._liblogin.dylib
src/: env_settings.rs  lib.rs  main.rs  manager.rs  types.rs
