[package]
name = "plugin-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.85"
console = "0.15.10"
env_logger = "0.11.6"
plugin_lib = { version = "0.1.0", path = "../../Libs/plugin_lib" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
libloading = "0.8.6"
