[package]
name = "plugin-system"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.85"
console = "0.15.10"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
libloading = "0.8.6"
actix-files = "0.6.6"
log = "0.4.25"
tempfile = "3.15.0"
zip = "2.2.2"
walkdir = "2.5.0"
dotenv = "0.15.0"
actix-cors = "0.7.0"
actix-governor = "0.8.0"
[dependencies.plugin_lib]
git = "https://github.com/End-YYDS/plugin_lib"
